src/objects/Income_Block__c.object
<CustomObject>
    <description>A block of income from an Income Source</description>
    <fields>
        <fullName>BDR_Estimated_Value__c</fullName>
        <formula>BDR__r.Total_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BDR Estimated Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BDR__c</fullName>
        <label>Business Development Record</label>
        <referenceTo>BDR__c</referenceTo>
        <relationshipName>Income_Blocks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The id of the contract for this income block</description>
        <label>Contract</label>
        <referenceTo>BD_Contract__c</referenceTo>
        <relationshipName>Income_Blocks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Essential_Support_Amount__c</fullName>
        <description>The total of all Essential Support Amounts form the Income Block Periods</description>
        <label>Essential Support Amount</label>
        <summarizedField>Income_Block_Period__c.Essential_Support_Amount__c</summarizedField>
        <summaryForeignKey>Income_Block_Period__c.Income_Block__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Income_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Income Source</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Income_Blocks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_Support_Amount__c</fullName>
        <description>The total of all Local Support Amounts form child Income Block Periods</description>
        <label>Local Support Amount</label>
        <summarizedField>Income_Block_Period__c.Local_Support_Amount__c</summarizedField>
        <summaryForeignKey>Income_Block_Period__c.Income_Block__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Restriction_Code__c</fullName>
        <description>Provide a restriction code if there is one</description>
        <inlineHelpText>Provide a restriction code if there is one</inlineHelpText>
        <label>Restriction Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuccessful</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <description>Total of all periods</description>
        <label>Total Amount</label>
        <summarizedField>Income_Block_Period__c.Total_Amount__c</summarizedField>
        <summaryForeignKey>Income_Block_Period__c.Income_Block__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_BDR_Allocation__c</fullName>
        <description>Sum(Total Allocation Amount)</description>
        <label>Total BDR Allocation</label>
        <summarizedField>Income_Block_Period__c.Total_Allocated_Amount__c</summarizedField>
        <summaryForeignKey>Income_Block_Period__c.Income_Block__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>VAT_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is VAT applicable for this income?</inlineHelpText>
        <label>VAT Applicable</label>
        <type>Checkbox</type>
    </fields>
    <label>BDR Income Block</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IB-{0000}</displayFormat>
        <label>Income Block Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BDR Income Blocks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>